Navbar - Nav items alignment fix

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -8,6 +8,17 @@ body {
 // ****************************************** //
 /* Navigation */
 .navbar {
+  position: relative;
+  padding: 0;
+
+  .navbar-nav {
+    padding: 16px 0;
+  }
+
+  .navbar-text {
+    position: absolute;
+    right: 15px;
+  }
 
   .nav-link {
     font-size: 1.1rem;
